<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bottom_sheet_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_blank"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/card_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_calculator"
        style="@style/Uikit.Style.CardView.Top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/uikit_margin_padding_size_xxsmall"
        android:layout_marginTop="@dimen/uikit_margin_padding_size_xsmall"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_blank"
        app:layout_goneMarginTop="@dimen/uikit_margin_padding_size_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_calculator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/uikit_margin_padding_size_small">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/uikit_margin_padding_size_small"
                android:textAppearance="@style/Uikit.Style.TextAppearance.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/button_seven"
                app:layout_constraintEnd_toStartOf="@+id/image_down"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Input Amount" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/uikit_margin_padding_size_small"
                app:layout_constraintBottom_toTopOf="@+id/button_nine"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_arrow_down" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_seven"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_seven"
                app:layout_constraintBottom_toTopOf="@+id/button_four"
                app:layout_constraintEnd_toStartOf="@+id/button_eight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_eight"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginEnd="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_eight"
                app:layout_constraintBottom_toTopOf="@+id/button_five"
                app:layout_constraintEnd_toStartOf="@+id/button_nine"
                app:layout_constraintStart_toEndOf="@+id/button_seven"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_nine"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_nine"
                app:layout_constraintBottom_toTopOf="@+id/button_six"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_eight"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_four"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_four"
                app:layout_constraintBottom_toTopOf="@+id/button_one"
                app:layout_constraintEnd_toStartOf="@+id/button_five"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_five"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginEnd="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_five"
                app:layout_constraintBottom_toTopOf="@+id/button_two"
                app:layout_constraintEnd_toStartOf="@+id/button_six"
                app:layout_constraintStart_toEndOf="@+id/button_four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_six"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_six"
                app:layout_constraintBottom_toTopOf="@+id/button_three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_one"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_one"
                app:layout_constraintBottom_toTopOf="@+id/button_zero"
                app:layout_constraintEnd_toStartOf="@+id/button_two"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_two"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginEnd="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_two"
                app:layout_constraintBottom_toTopOf="@+id/button_zero"
                app:layout_constraintEnd_toStartOf="@+id/button_three"
                app:layout_constraintStart_toEndOf="@+id/button_one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_three"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_three"
                app:layout_constraintBottom_toTopOf="@+id/button_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_zero"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_zero"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button_two"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_clear"
                style="@style/Uikit.Style.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/uikit_margin_padding_size_xsmall"
                android:layout_marginTop="@dimen/uikit_margin_padding_size_xxsmall"
                android:layout_marginBottom="@dimen/uikit_margin_padding_size_xsmall"
                android:background="@drawable/background_border_calculator"
                android:text="@string/calculator_clear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_zero" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>